@@ -8,9 +8,9 @@ Here is an ASCII diagram of the current architecture:
 manager       admin     main.Director
   =             =            |
 reconfig,     web ui         |
-dead hosts,                  +-----------------+
-                             |                 |
-                         schedulers    loaders.Listeners
+dead hosts,                  +-----------------+-------------------+
+                             |                 |                   |
+                         schedulers    loaders.Listeners     Control Socket
                              =                 =
                           lb type,          proxies
                          algorithms,
