@@ -24,6 +24,8 @@
 Reid.
 * Added the configuration options for the control/socket stuff from Apple
 (Calendar Server) by David Reid.
+* Updated the architecture diagram with the control/socket stuff.
+* Added the Apple Calendar Server changes from David Reid to the Director.
 
 2008.06.21 oubiwann
 
